# Decode

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  SETUP.md  WORLDS.xml  build.common.gradle  build.dependencies.gradle  build.gradle  compile_commands.json  empiricalTrajectory.py  generate_autos.py  omega_bisect_cells.json  omega_bisect_samples.json  optimized_shot_tuning_data.json  quals.xml
.beads/: issues.jsonl
.claude/: settings.json
.claude/scripts/: convert_tuning_data.py
.run/: TeamCode.run.xml
TeamCode/: build.gradle
TeamCode/choreo/: New Path (1).traj  New Path (2).traj  New Path (3).traj  New Path (5).traj  New Path.traj  WHEEE.traj  base.chor  first shoot.traj  forward.traj  second shoot.traj  sideways.traj  test return.traj  test.traj  turn.traj
TeamCode/src/main/assets/: Ramp Assembly - am-5715 (1).stl  robot.urdf
TeamCode/src/main/cpp/: CMakeLists.txt  DrakeSim.cpp  DrakeSim.hpp  DrakeSimSetup.cpp  DrakeSimState.cpp  DrakeSimStub.cpp  native-lib.cpp
TeamCode/src/main/java/sigmacorns/: AimingShooter.kt  FieldState.kt  Robot.kt  State.kt
TeamCode/src/main/resources/: physics_estimate_data.json
TeamCode/src/test/resources/: shot_tuning_data.json
TeamCode/trajopt/: 12ballfar.json  12ballfar_mirrored.json  15closeredbetter.json  15closeredbetter_mirrored.json  18farredhp.json  18farredhp_mirrored.json  21-far-red.json  21-far-red_mirrored.json  21-red-far-mixed.json  21-red-far-mixed_mirrored.json  21-red-far.json  21-red-far_mirrored.json  auto-1.json  auto-1_mirrored.json  base-mirrored.json  base-mirrored_mirrored.json  base.json  base_mirrored.json  basefar.json  basefarShort.json  basefarShort_mirrored.json  basefar_mirrored.json  basefar_preload.json  basefar_preload_mirrored.json  intake.json  near.json  near_mirrored.json  redwallpreload.json  simple.json  simple_mirrored.json  test-intake-and-shoot.json  test-intake-and-shoot_mirrored.json  test12ball.json  test12ball_mirrored.json  turntest.json  turntest_mirrored.json
config/: ball_tracker.json
config/cad/: extraction_notes.md
doc/: OPTIMIZED_SHOOT.md  battery-mhe-theory.md
tools/: parse_step.py
(+345 files in other folders)
